--- a/scss/components/benefit.scss
+++ b/scss/components/benefit.scss
@@ -4,7 +4,7 @@
     @include phones {
         display: flex;
         text-align: left;
-
+        align-items: flex-start;
     }
 }
 
@@ -12,9 +12,13 @@
 .benefit__image {
     margin-bottom: rem(12px);
 
+    @include tablets {
+        margin-bottom: rem(18px);
+    }
+
     @include phones {
         margin-bottom: 0;
-        margin-right: rem(20px);
+        margin-right: rem(14px);
     }
 
 }
@@ -27,6 +31,11 @@
     background: #F2F5F4;
     border-radius: 50%;
     overflow: hidden;
+
+    @include phones {
+        width: rem(140px);
+        height: rem(140px);  
+    }
 }
 
 .benefit__icon {
@@ -43,6 +52,14 @@
     font-size: rem(27px);
     margin-bottom: rem(17px);
     color: #292929;
+
+    @include tablets {
+        margin-bottom: rem(6px);
+    }
+
+    @include phones {
+        font-size: rem(29px);
+    }
 }
 
 .benefit__desc {
