--- a/scss/components/footer.scss
+++ b/scss/components/footer.scss
@@ -3,8 +3,13 @@
     left: 0;
     right: 0;
     bottom: 0;
-    padding: rem(28px) 0;
+    padding: rem(16px) 0;
     background: #fff;
+
+    @include tablets {
+        padding: rem(16px) 0;
+
+    }
 }
 
 .footer__container {
@@ -12,6 +17,9 @@
     justify-content: space-between;
     align-items: center;
 
+    @include tablets {
+        max-width: rem(740px);
+    }
     @include phones {
         flex-direction: column;
     }
