--- a/scss/components/headline.scss
+++ b/scss/components/headline.scss
@@ -8,20 +8,23 @@
     margin-bottom: rem(11px);
 
     @include phones {
-        font-size: rem(40px);
-    }
-
-    @include old-phones {
-        font-size: rem(32px);
+        margin-bottom: 0;
     }
 }
 
 .headline__subtitle {
     padding: 0 27%;
     margin-bottom: rem(42px);
-
-    @include phones {
-        padding: 0 5%;
+    
+    @include tablets {
+        max-width: 426px;
+        padding: 0;
+        margin: 0 auto rem(50px);
     }
 
+    @include phones {
+        font-size: rem(20px);
+        margin: 0 auto rem(55px);
+
+    }
 }
