--- a/scss/components/hero.scss
+++ b/scss/components/hero.scss
@@ -22,16 +22,17 @@
 
     @include tablets {
         width: 100%;
-        flex: 1;
+        flex: 0.87;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         text-align: center;
-        padding-top: rem(100px);
     }
 
-
+    @include phones {
+        flex: .88;
+    }
 }
 
 .hero__icons-section {
@@ -39,8 +40,6 @@
         display: none;
     }
 }
-
-
 
 .hero__container {
     display: flex;
@@ -57,26 +56,31 @@
     margin-bottom: rem(15px);
     text-transform: uppercase;
 
-    @include phones {
-        font-size: rem(40px);
-        line-height: rem(36px);
+    @include tablets {
+        max-width: rem(700px);
+        font-size: rem(51px);
+        margin-bottom: rem(8px);
+
     }
 
-    @include old-phones {
-        font-size: rem(32px);
+    @include phones {
+        font-size: rem(45px);
+        line-height: .9;
     }
 }
 
 .hero__title-desc {
     font-size: rem(21px);
-    margin-bottom: rem(57px);
+    margin-bottom: rem(40px);
     font-weight: normal;
 
-    @include phones {
-        font-size: rem(18px);
+    @include tablets {
+        margin-bottom: rem(42px);
+        font-size: rem(24px);
     }
 
-    @include old-phones {
-        font-size: rem(16px);
+    @include phones {
+        font-size: rem(20px);
+        margin-bottom: rem(48px);
     }
 }
