--- a/scss/components/socials.scss
+++ b/scss/components/socials.scss
@@ -5,10 +5,7 @@
 
 
 .social__item {
-    margin-right: rem(14px);
-}
-
-.socials__icon {
+    margin-left: rem(14px);
     width: rem(20px);
     height: rem(20px);
 }
