--- a/scss/components/contacts.scss
+++ b/scss/components/contacts.scss
@@ -1,11 +1,39 @@
 .contacts {
     font-size: rem(21px);
     font-style: normal;
+    position: relative;
 
     @include phones {
         margin-bottom: rem(10px);
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+}
+.footer__phone-number{
+    margin-left: rem(20px);
+    position: relative;
+
+    &::before {
+        content: "";
+        background: url('../images/Icons/phone-black.svg') no-repeat;
+        position: absolute;
+        width: rem(14px);
+        height: rem(14px);
+        display: block;
+        margin-top: rem(8px);
+
+        @include phones {
+            top: 0;
+            bottom: 0;
+            left: rem(-20px);
+        }
+    
+    }
+}
+
+.contacts__place {
+    @include phones {
+        margin-bottom: rem(11px);
     }
 }
