--- a/scss/components/reviews.scss
+++ b/scss/components/reviews.scss
@@ -1,7 +1,16 @@
 .reviews__display {
     background: #F8FAF9;
-    padding: rem(41px) rem(40px) rem(41px);
+    padding: rem(42px) rem(142px) rem(42px) rem(42px);
     margin-bottom: rem(15px);
+
+    @include tablets {
+        padding: rem(42px) rem(42px) rem(42px) rem(42px);
+    }
+
+    @include phones {
+        padding: rem(42px) rem(42px) 0 rem(42px);
+        margin-bottom: 3.833333rem;
+    }
 }
 
 .reviews__display-inner {
@@ -19,9 +28,9 @@
     height: rem(262px);
 
     @include tablets {
-        width: rem(133px);
-        height: rem(130px);
-        margin: rem(19px) 0 rem(16px) 0;
+        width: rem(137px);
+        height: rem(138px);
+        margin: rem(19px) 0 rem(9px) 0;
     };
 }
 
@@ -42,6 +51,11 @@
     font-weight: bold;
     margin-bottom: rem(12px);
     color: #292929;
+
+    @include tablets {
+    margin-bottom: rem(14px);
+
+    }
 }
 
 .reviews__text {
@@ -61,7 +75,9 @@
     @include tablets {
         margin-bottom: rem(23px);
     }
-
+    @include phones {
+        margin-bottom: 0;
+    }
 }
 
 .reviews__switcher {
