--- a/scss/components/section.scss
+++ b/scss/components/section.scss
@@ -7,7 +7,7 @@
 }
 
 .section__title {
-    font-size: rem(48px);
+    font-size: 48px;
     font-weight: bold;
     margin-bottom: rem(60px);
     text-align: center;
@@ -15,10 +15,7 @@
     color: #292929;
 
     @include phones {
-        font-size: rem(40px);
-    }
-
-    @include old-phones {
-        font-size: rem(32px);
+        font-size: rem(45px);
+        line-height: 1.1;
     }
 }
