--- a/scss/components/icons.scss
+++ b/scss/components/icons.scss
@@ -1,16 +1,26 @@
-.material-icon, .surf-icon {
-    transform: translate(rem(30px), rem(30px));
+.phone-icon {
+    width: rem(14px);
+    height: rem(14px);
+    display: flex;
 }
 
-.person-icon {
-    transform: translate(rem(40px), rem(30px));
+.surfboard-icon, .desktop-icon, .car-icon {
+    width: rem(35px);
+    height: rem(35px);
+
+}
+
+.material-icon, .surf-icon, .person-icon {
+    width: rem(70px);
+    height: rem(70px);
+    transform: translateY(rem(30px));
+
+    @include phones {
+    transform: translate(rem(35px), rem(30px));
+    }
 }
 
 .vk-icon, .fb-icon, .in-icon, .tw-icon {
     width: rem(22px);
     height: rem(22px);
-}
-
-.vk-icon {
-    transform: translateY(5px);
 }
