--- a/scss/components/contacts.scss
+++ b/scss/components/contacts.scss
@@ -10,25 +10,11 @@
         align-items: center;
     }
 }
-.footer__phone-number{
-    margin-left: rem(20px);
-    position: relative;
 
-    &::before {
-        content: "";
-        background: url('../images/Icons/phone-black.svg') no-repeat;
-        position: absolute;
-        width: rem(14px);
-        height: rem(14px);
-        display: block;
-        margin-top: rem(8px);
-
-        @include phones {
-            top: 0;
-            bottom: 0;
-            left: rem(-20px);
-        }
-    
+.footer__phone-number {
+    @include phones {
+        margin: 0;
+        display: flex;
     }
 }
 
