--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,6 +49,21 @@ $z-fixed-menu:100;
 @import "./components/contacts.scss";
 @import "./components/socials.scss";
 @import "./components/icons.scss";
+@import "./components/products-slider.scss";
+@import "./components/slider-container.scss";
+@import "./components/product-slider__arrows.scss";
+@import "./components/products.scss";
+@import "./components/parameters-block.scss";
+@import "./components/dropdown.scss";
+@import "./components/product-section.scss";
+@import "./components/fullscreen-menu.scss";
+
+
+
+
+
+
+
 
 
 
