--- a/css/main.css
+++ b/css/main.css
@@ -628,6 +628,14 @@ img {
 .menu__item:last-child {
   margin-right: 0;
 }
+@media screen and (max-width: 768px) {
+  .menu__item {
+    margin-right: 3.333333rem;
+  }
+  .menu__item:last-child {
+    margin-right: 3.333333rem;
+  }
+}
 
 .menu__link {
   text-decoration: none;
@@ -1487,4 +1495,446 @@ img {
 
 .phone-icon--color--white {
   fill: white;
+}
+
+.close-icon {
+  width: 1.1111111111rem;
+  height: 1.1111111111rem;
+}
+
+.products-slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.slider-container {
+  overflow: hidden;
+}
+
+.product-slider__arrow {
+  margin: 0 auto;
+  position: absolute;
+  z-index: 10;
+  top: 50%;
+}
+.product-slider__arrow--direction--prev {
+  left: 0;
+}
+@media screen and (max-width: 768px) {
+  .product-slider__arrow--direction--prev {
+    -webkit-transform: translate(6.1111111111rem, -9rem);
+            transform: translate(6.1111111111rem, -9rem);
+  }
+}
+@media screen and (max-width: 500px) {
+  .product-slider__arrow--direction--prev {
+    -webkit-transform: translate(0, -10.1111111111rem);
+            transform: translate(0, -10.1111111111rem);
+  }
+}
+.product-slider__arrow--direction--next {
+  right: 0;
+}
+@media screen and (max-width: 768px) {
+  .product-slider__arrow--direction--next {
+    -webkit-transform: translate(-6.6666666667rem, -9.1111111111rem);
+            transform: translate(-6.6666666667rem, -9.1111111111rem);
+  }
+}
+@media screen and (max-width: 500px) {
+  .product-slider__arrow--direction--next {
+    -webkit-transform: translate(0, -10.1111111111rem);
+            transform: translate(0, -10.1111111111rem);
+  }
+}
+
+.product__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 0 5%;
+}
+@media screen and (max-width: 768px) {
+  .product__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.product__col {
+  width: 50%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0 1% 0;
+}
+@media screen and (max-width: 768px) {
+  .product__col {
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.products {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+.product__parameters {
+  margin-bottom: 2.6111111111rem;
+}
+
+.image-wrapper {
+  background: url("../../images/slider/board-before-bg.png") center top 65%/contain no-repeat;
+}
+@media screen and (max-width: 768px) {
+  .image-wrapper {
+    width: 48%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .image-wrapper {
+    width: 60%;
+  }
+}
+
+.product__title {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #292929;
+  text-transform: uppercase;
+  margin-bottom: 1.2222222222rem;
+}
+@media screen and (max-width: 768px) {
+  .product__title {
+    font-size: 1.6666666667rem;
+    line-height: 2rem;
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  .product__title {
+    font-size: 1.7777777778rem;
+  }
+}
+
+.product__text {
+  line-height: 1.2rem;
+  margin-bottom: 1.2222222222rem;
+  padding-right: 1.1666666667rem;
+}
+@media screen and (max-width: 768px) {
+  .product__text {
+    padding: 0 10%;
+    text-align: center;
+    line-height: 1.1;
+    font-size: 1rem;
+    margin-bottom: 1.7777777778rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  .product__text {
+    line-height: 1.4;
+    margin-bottom: 0.9444444444rem;
+  }
+}
+
+.product__values {
+  width: 20.5555555556rem;
+}
+@media screen and (max-width: 768px) {
+  .product__values {
+    margin-bottom: 0.8333333333rem;
+    text-align: end;
+  }
+}
+
+.second-col {
+  margin-left: 3.0555555556rem;
+}
+@media screen and (max-width: 768px) {
+  .second-col {
+    text-align: center;
+  }
+}
+
+.second-value {
+  font-weight: bold;
+  color: #000;
+}
+
+.product__cost {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.cost-text {
+  font-size: 3.3333333333rem;
+  color: #151515;
+}
+@media screen and (max-width: 768px) {
+  .cost-text {
+    padding-right: 2.7777777778rem;
+  }
+}
+
+.product__btn {
+  background-color: #FFD517;
+  color: #000;
+  margin-right: 2rem;
+}
+@media screen and (max-width: 768px) {
+  .product__btn {
+    margin-right: 0;
+  }
+}
+@media screen and (max-width: 500px) {
+  .product__btn {
+    font-size: 1rem;
+  }
+}
+
+.parameters-block {
+  width: 5.0555555556rem;
+  height: 5.0555555556rem;
+  background-color: #3A587E;
+  border-radius: 0.2222222222rem;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+  .parameters-block {
+    display: none;
+  }
+}
+
+.parameters__pic {
+  width: 2.2222222222rem;
+  height: 2.2222222222rem;
+  margin: 0.9444444444rem 0 0.3888888889rem 0;
+}
+
+.parameter__text {
+  text-transform: uppercase;
+  font-size: 0.7777777778rem;
+  font-weight: bold;
+}
+
+.dropdown__link {
+  width: 5.0555555556rem;
+  height: 5.0555555556rem;
+  background: url("../../images/slider/arrows.png") center top 30%/cover no-repeat;
+  background-size: 2.2222222222rem, 2.2222222222rem;
+  background-color: #3A587E;
+  border-radius: 0.2222222222rem;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 0.7777777778rem;
+  line-height: 2.3;
+  font-weight: bold;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+@media screen and (max-width: 768px) {
+  .dropdown__link {
+    display: none;
+  }
+}
+
+.parameters-block:hover .dropdown__menu {
+  display: block;
+}
+
+.parameters-block:hover .dropdown__link {
+  background-color: #3465A3;
+}
+
+.dropdown__menu {
+  position: absolute;
+  top: 0;
+  right: 5.3333333333rem;
+  width: 15.2777777778rem;
+  height: 16.2222222222rem;
+  background: rgba(255, 255, 255, 0.8);
+  -webkit-box-shadow: 4px 4px 40px rgba(0, 0, 0, 0.86);
+          box-shadow: 4px 4px 40px rgba(0, 0, 0, 0.86);
+  -webkit-backdrop-filter: blur(40px);
+          backdrop-filter: blur(40px);
+  border-radius: 0.2222222222rem;
+  color: #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 0.8888888889rem;
+  display: none;
+}
+.dropdown__menu::before {
+  content: "";
+  display: block;
+  top: 0;
+  bottom: 0;
+  left: -5.1111111111rem;
+  width: 5.5555555556rem;
+  position: absolute;
+}
+
+.dropdown__list {
+  width: 100%;
+  height: 13.8888888889rem;
+}
+
+.dropdown__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 1.5555555556rem;
+}
+.dropdown__item:last-child {
+  margin-bottom: 0;
+}
+
+.dropdown__item-icon {
+  width: 1.5rem;
+  height: 1.5rem;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin-left: 1.6666666667rem;
+}
+
+.dropdown__item-text {
+  text-align: left;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+}
+
+.dropdown__item-value {
+  margin-right: 1.3888888889rem;
+}
+
+.product-section {
+  background-color: #F8FAF9;
+}
+
+@media screen and (max-width: 768px) {
+  .fullscreen-menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background: #313131;
+    overflow: hidden;
+    display: none;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    color: #fff;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .active {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .fullscreen-menu__close {
+    position: absolute;
+    top: 2.1111111111rem;
+    right: 2.1111111111rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  .fullscreen-menu__close {
+    top: 1.9444444444rem;
+    right: 0.8333333333rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .menu--vertical {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 2rem;
+    color: #fff;
+    width: 30%;
+    height: 50%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .menu--vertical {
+    width: 44%;
+  }
 }
