--- a/scss/components/parameters-block.scss
+++ b/scss/components/parameters-block.scss
@@ -1,6 +1,7 @@
 .parameters-block {
     width: rem(91px);
     height: rem(91px);
+    background: url('../images/slider/arrows.png') center top 30% / cover no-repeat;
     background-color: #3A587E;
     border-radius: rem(4px);
     color: #fff;
