--- a/scss/components/dropdown.scss
+++ b/scss/components/dropdown.scss
@@ -1,7 +1,7 @@
 .dropdown__link {
     width: rem(91px);
     height: rem(91px);
-    background: url("../../images/slider/arrows.png") center top 30% / cover no-repeat;
+    background: url("../images/slider/arrows.png") center top 30% / cover no-repeat;
     background-size: rem(40px), rem(40px);
     background-color: #3A587E;
     border-radius: rem(4px);
