--- a/scss/components/products.scss
+++ b/scss/components/products.scss
@@ -125,7 +125,7 @@
 }
 
 .product__btn {
-    background-color: $yellow1;
+    background: $yellow;
     color: #000;
     margin-right: rem(36px);
 
