--- a/scss/components/products.scss
+++ b/scss/components/products.scss
@@ -5,7 +5,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    padding: 0 5%;
+    // padding: 0 0 0 13%;
 
     @include tablets {
         flex-direction: column;
@@ -17,8 +17,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    // justify-content: space-between;
-    padding: 0 1% 0;
+    padding-left: 7%;
 
     @include tablets {
         width: 100%;
@@ -37,13 +36,13 @@
 }
 
 .image-wrapper {
-    background: url("../../images/slider/board-before-bg.png") center top 65% / contain no-repeat;
+    background: url("../images/slider/board-before-bg.png") center top 65% / contain no-repeat;
     @include tablets {
-        width: 48%;
+        width: 45%;
     }
 
     @include phones {
-        width: 60%;
+        width: 57%;
     }
 }
 
