--- a/css/main.css
+++ b/css/main.css
@@ -1793,7 +1793,9 @@ img {
 }
 
 .parameters-block:hover .dropdown__menu {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .parameters-block:hover .dropdown__link {
@@ -1803,7 +1805,7 @@ img {
 .dropdown__menu {
   position: absolute;
   top: 0;
-  right: 5.3333333333rem;
+  right: 2.1111111111rem;
   width: 15.2777777778rem;
   height: 16.2222222222rem;
   background: rgba(255, 255, 255, 0.8);
