--- a/scss/main.scss
+++ b/scss/main.scss
@@ -57,6 +57,8 @@ $z-fixed-menu:100;
 @import "./components/dropdown.scss";
 @import "./components/product-section.scss";
 @import "./components/fullscreen-menu.scss";
+@import "./components/team.scss";
+
 
 
 
