--- a/scss/components/section.scss
+++ b/scss/components/section.scss
@@ -14,6 +14,10 @@
     text-transform: uppercase;
     color: #292929;
 
+    &--team {
+        margin-bottom: rem(48px);
+    }
+
     @include phones {
         font-size: rem(45px);
         line-height: 1.1;
